- SCR(s) Resolved: scr#75522 Provide button, UI to add a JDBC driver scr#77243 Layout displays column widths incorrectly
- Description:
1. scr#75522 adds oda jdbc driver manage dialog
2. scr#77243 fix a tablelayout calculation bug.
3. adds expression page for data item.

- Regression ( Yes/No ):No

- Code Owner: Zhiqiang Qian

- Code Reviewers: SHA GUI, Qiangsheng Wang

- Tests: Yes

- Test Automated (Yes/No, if "No" then explain why):No, gui feature

- Case Entries Resolved:
- Notes to Developers:
- Notes to QA:
- Notes to Documentation:
- Notes to Configuration Management:
- Notes to Support:
- Notes to Product Marketing:

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -38,6 +38,7 @@ wizard.label.url=Database URL:
 wizard.label.username=User Name:
 wizard.label.password=Password:
 wizard.label.testConnection=Test Connection...
+wizard.label.manageDriver=Manage Drivers...
 wizard.label.search=Search:
 wizard.label.filter=Filter:
 tablepage.label.selecttype=Type:
@@ -66,4 +67,22 @@ joins.sequence.dialog.label.message=Change the join sequence by Selecting a join
 joins.sequence.dialog.fromcolumn=From Column
 joins.sequence.dialog.tocolumn=To Column
 joins.sequence.dialog.jointype=Type of Join
+driverManagerDialog.text.title=Manage JDBC Drivers
+driverManagerDialog.text.jarColumnFileName=File Name
+driverManagerDialog.text.jarColumnLocation=Original Location
+driverManagerDialog.message.NotInODADirectory=x - This file does not exist in the ODA JDBC drivers directory.
+driverManagerDialog.message.FileNotExist=* - This file does not exist in the original location.
+driverManagerDialog.text.Add=Add...
+driverManagerDialog.text.Restore=Restore
+driverManagerDialog.text.Delete=Delete
+driverManagerDialog.text.JarFile=JAR Files
+driverManagerDialog.text.driverColumnClassName=Driver Class Name
+driverManagerDialog.text.driverColumnDisplayName=Display Name
+driverManagerDialog.text.driverColumnTemplate=URL Template
+driverManagerDialog.text.Edit=Edit...
+driverManagerDialog.text.Drivers=Drivers
+driverManagerDialog.text.EditDriverTitle=Edit JDBC Driver
+driverManagerDialog.text.EditDriverClassName=Driver Class Name:
+driverManagerDialog.text.EditDriverDisplayName=Driver Display Name:
+driverManagerDialog.text.EditDriverTemplate=URL Template:
 
