--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
@@ -1,3 +1,22 @@
+###############################################################################
+# Copyright (c) 2004 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation  - initial API and implementation
+###############################################################################
+
+###############################################################################
+# Viewer Path
+###############################################################################
+birt-viewer-driver-path=birt-viewer/WEB-INF/plugins/org.eclipse.birt.report.data.oda.jdbc/drivers
+
+###############################################################################
+# NLS String
+###############################################################################
 dataset.editor.page.query=Query
 datasource.name=JDBC data source
 dataset.jdbcselect=JDBC select data set
