Add js.jar dependency to core, then js.jar of DTE can be deleted.

--- a/data/org.eclipse.birt.data/.classpath
+++ b/data/org.eclipse.birt.data/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry exported="true" kind="lib" path="lib/js.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/derby.jar"/>
+	<classpathentry exported="true" kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
