--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -10,6 +10,9 @@
       <library name="oda-jdbc.jar">
          <export name="*"/>
       </library>
+      <library name="derby.jar">
+         <export name="*"/>
+      </library>
    </runtime>
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
@@ -127,21 +130,14 @@
       <jdbcDriver
             driverClass="net.sourceforge.jtds.jdbc.Driver"
             urlTemplate="jdbc:jtds:[sqlserver|sybase]://&lt;server&gt;[:&lt;port&gt;][/&lt;database&gt;][;&lt;property&gt;=&lt;value&gt;[;...]]"
-            name="jTDS 1.02  for MSSQL and Sybase">
-         <driverBinary file="jtds-1.0.2.jar"/>
-      </jdbcDriver>
+            name="jTDS 1.02  for MSSQL and Sybase"/>
       <jdbcDriver
             driverClass="org.apache.derby.jdbc.EmbeddedDriver"
             urlTemplate="jdbc:derby:[subsubprotocol:][databasename][;attributes]"
-            name="Apache Derby Embedded Driver">
-         <driverBinary file="derby.jar"/>
-      </jdbcDriver>
+            name="Apache Derby Embedded Driver"/>
       <jdbcDriver
             driverClass="com.ibm.db2.jcc.DB2Driver"
             urlTemplate="jdbc:derby:net://&lt;server&gt;[:&lt;port&gt;]/&lt;databaseName&gt;[;&lt;attr&gt;=&lt;value&gt; ]*"
-            name="Apache Derby Network (IBM DB2 Universal Driver)">
-         <driverBinary file="db2jcc.jar"/>
-         <driverBinary file="db2jcc_license_cu.jar"/>
-      </jdbcDriver>
+            name="Apache Derby Network (IBM DB2 Universal Driver)"/>
    </extension>
 </plugin>
