--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -26,6 +26,7 @@
       <import plugin="org.eclipse.jface.text"/>
       <import plugin="org.eclipse.compare"/>
       <import plugin="org.eclipse.birt.data.oda"/>
+      <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
    </requires>
    <extension
          point="org.eclipse.birt.report.designer.ui.odadatasource">
