Add password protected support

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -56,3 +56,4 @@ INVALID_PROPERTY_TYPE=The property type [{0}] is invalid.
 VALIDATOR_NAME_REQUIRED=The validator name is required.
 DEFAULT_UNIT_NOT_ALLOWED=The default unit can only be set on the dimension property type.
 INVALID_UNIT=The default unit "{1}" on property "{0}" is invalid.
+ENCYRPTION_EXTENSION_EXISTS=The encryption extension "{0}" exists.
