--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -19,4 +19,5 @@
    </requires>
    <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
    <extension-point id="odaDriverModel" name="odaDriverModel" schema="schema/odaDriver.exsd"/>
+   <extension-point id="encryptionHelper" name="encryptionHelper" schema="schema/encryptionHelper.exsd"/>
 </plugin>
