Reversed a previous checkin which put derby.jar in the drivers directory. This JAR should be outside of drivers, and listed in the plugin.xml file.

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -10,6 +10,9 @@
       <library name="oda-jdbc.jar">
          <export name="*"/>
       </library>
+      <library name="derby.jar">
+         <export name="*"/>
+      </library>
    </runtime>
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
