Add reference to org.junit so that Junit Plugin Test is available for OdaConsumer test cases

--- a/data/org.eclipse.birt.data/plugin.xml
+++ b/data/org.eclipse.birt.data/plugin.xml
@@ -14,6 +14,7 @@
       </library>
    </runtime>
    <requires>
+   	  <import plugin="org.junit" optional="true"/>
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.birt.data.oda"/>
    </requires>
