Changes to upgrade jdbc connection information

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -46,6 +46,7 @@ tablepage.filter.warning=Please specify a filter.
 wizard.message.createDataSource=Create a new data source
 wizard.message.editDataSource=Edit the selected data source
 error.emptyDatasourceName=Data source name must not be empty
+error.upgradingConnection=Error upgrading JDBC connection information
 error.duplicateName=The new name duplicates an existing name in the same name space
 error.emptyDriverclass=Driver class must not be empty
 error.emptyDatabaseUrl=URL must not be empty
