--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -2,6 +2,7 @@ testDataSource=JDBC
 src=src
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
+oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
 oda.dir=../org.eclipse.birt.data.oda
 bin=bin
 doc=doc
@@ -21,5 +22,6 @@ dte.jar=dte.jar
 oda.jar=oda.jar
 core.jar=core.jar
 oda.jdbc.jar=oda-jdbc.jar
+oda.flatfile.jar=oda-flatfile.jar
 
 
