--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -16,6 +16,7 @@
    </runtime>
    <requires>
       <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.birt.data.oda"/>
       <import plugin="org.eclipse.birt.report.model"/>
    </requires>
