--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.properties
@@ -19,6 +19,6 @@ birt-viewer-driver-path=birt/WEB-INF/plugins/org.eclipse.birt.report.data.oda.jd
 ###############################################################################
 dataset.editor.page.query=Query
 datasource.name=JDBC data source
-dataset.jdbcselect=JDBC select data set
+dataset.jdbcselect=SQL SELECT via JDBC
 datasource.editor.page.connection=Data source connection
 preference.externalEditor.title=External editor
