Updated plugin.xml for report.oda.jdbc.ui, report.oda.flatfile.ui and chart.ui projects to fix various branding/naming issues.

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -2,9 +2,9 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.eclipse.birt.report.data.oda.jdbc.ui"
-   name="Jdbc Plug-in"
+   name="BIRT ODA-JDBC Data Source UI"
    version="1.0.0"
-   provider-name=""
+   provider-name="Eclipse.org"
    class="org.eclipse.birt.report.data.oda.jdbc.ui.JdbcPlugin">
 
    <runtime>
