Add isEncryptable property to Password.

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -173,6 +173,7 @@
                   type="string"
                   defaultDisplayName="Password"
                   canInherit="true"
+                  isEncryptable="true"
                   name="odaPassword"/>
          </propertyGroup>
       </odaDataSource>
