--- a/data/org.eclipse.birt.report.data.oda.sampledb/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb/plugin.properties
@@ -1,4 +1,4 @@
 dataset.editor.page.query=Query
-datasource.name=BIRT Sample Database
+datasource.name=Classic Models Inc. Sample Database
 dataset.jdbcselect=JDBC select data set
 datasource.editor.page.connection=Data source connection
