--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.eclipse.birt.report.data.oda.jdbc.ui"
-   name="BIRT ODA-JDBC Data Source UI"
+   name="BIRT JDBC UI Plug-in"
    version="1.0.0"
    provider-name="Eclipse.org"
    class="org.eclipse.birt.report.data.oda.jdbc.ui.JdbcPlugin">
