Two action will be done when SQLDataSetEditorPage activated, add Text and set Focus.

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -46,7 +46,8 @@
                   class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
                   path="/"
                   displayName="%dataset.editor.page.query"
-                  name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
+                  name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"
+                  initFocus="true"/>
          </odaDataSetUI>
       </odaDataSourceUI>
     </extension>
