Bugzilla Bug 95887 JAR Hell for BIRT - Part 1

--- a/data/org.eclipse.birt.data/.classpath
+++ b/data/org.eclipse.birt.data/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/derby.jar"/>
+	<classpathentry kind="lib" path="/org.eclipse.birt.core/lib/junit.jar"/>
+	<classpathentry kind="lib" path="/org.eclipse.birt.report.data.oda.jdbc/derby.jar"/>
 	<classpathentry exported="true" kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
