--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -30,25 +30,20 @@
    </requires>
    <extension
          point="org.eclipse.birt.report.designer.ui.odadatasource">
-      <odaDataSourceUI
-            name="jdbc"
-            displayName="%datasource.name">
+      <odaDataSourceUI id="org.eclipse.birt.report.data.oda.jdbc">
          <newDataSourceWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourceWizard"/>
          <dataSourceEditorPage
                class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourcePage"
                path="/"
                displayName="%datasource.editor.page.connection"
                name="org.eclipse.birt.report.data.oda.jdbc.ui.data-source-editor.connection"/>
-         <odaDataSetUI
-               name="JdbcSelectDataSet"
-               displayName="%dataset.jdbcselect">
+      </odaDataSourceUI>
+      <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet">
             <dataSetEditorPage
                   class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
                   path="/"
                   displayName="%dataset.editor.page.query"
-                  name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"
-                  initFocus="true"/>
-         </odaDataSetUI>
-      </odaDataSourceUI>
+                  name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
+       </odaDataSetUI>
     </extension>
    </plugin>
