--- a/data/org.eclipse.birt.report.data.oda.sampledb/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb/plugin.xml
@@ -22,20 +22,33 @@
       <import plugin="org.eclipse.birt.report.model"/>
       <import plugin="org.eclipse.birt.core"/>
    </requires>
+   
    <extension
-         point="org.eclipse.birt.data.oda.odaDriverRuntime">
-      <odaDriverRuntime
-            odaVersion="2.0"
-            driverName="sampledb"
-            connectionFactoryClass="org.eclipse.birt.report.data.oda.sampledb.SampleDBConnectionFactory"
-            setThreadContextClassLoader="false">
-         <providerInfo
-               providerOrg="Eclipse.org"
-               applicationName="BIRT SampleDB Driver"
-               providerURL="http://www.eclipse.org"
-               copyrightNotice="Copyright (c) 2004-2005 Actuate Corporation. All rights reserved. This program and the accompanying materials are made available under the  terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html"
-               version="1.0"/>
-         <dataSetType name="JdbcSelectDataSet">
+         point="org.eclipse.birt.report.designer.ui.odadatasource">
+      
+      <odaDataSourceUI id="org.eclipse.birt.report.data.oda.sampledb">
+      </odaDataSourceUI>
+      
+      <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet">
+            <dataSetEditorPage
+                  class="org.eclipse.birt.report.data.oda.sampledb.SampleDataSetEditor"
+                  path="/"
+                  name="org.eclipse.birt.report.data.oda.sampledb.data-set-editor-page"
+                  displayName="%dataset.editor.page.query"/>
+      </odaDataSetUI>
+   </extension>
+    
+   <extension
+         point="org.eclipse.birt.data.oda.dataSource">
+      <dataSource
+            odaVersion="2.0.0"
+            driverClass="org.eclipse.birt.report.data.oda.sampledb.SampleDBDriver"
+            defaultDisplayName="%datasource.name"
+            setThreadContextClassLoader="false"
+            id="org.eclipse.birt.report.data.oda.sampledb"/>
+      <dataSet
+            defaultDisplayName="%select.dataset.name"
+            id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet">
             <dataTypeMapping
                   nativeDataType="BIT"
                   nativeDataTypeCode="-7"
@@ -116,24 +129,7 @@
                   nativeDataType="BOOLEAN"
                   nativeDataTypeCode="16"
                   odaScalarDataType="Integer"/>
-          </dataSetType>
-      </odaDriverRuntime>
+      </dataSet>
    </extension>
-   <extension
-         point="org.eclipse.birt.report.designer.ui.odadatasource">
-      <odaDataSourceUI
-            name="sampledb"
-            displayName="%datasource.name">
-         <odaDataSetUI
-               name="JdbcSelectDataSet"
-               displayName="%dataset.jdbcselect">
-            <dataSetEditorPage
-                  class="org.eclipse.birt.report.data.oda.sampledb.SampleDataSetEditor"
-                  path="/"
-                  name="org.eclipse.birt.report.data.oda.sampledb.data-set-editor-page"
-                  displayName="%dataset.editor.page.query"/>
-         </odaDataSetUI>
-      </odaDataSourceUI>
-    </extension>
 
 </plugin>
