Catch MetaDataException that propertyVisibility defined for a non-exist property

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -57,3 +57,4 @@ VALIDATOR_NAME_REQUIRED=The validator name is required.
 DEFAULT_UNIT_NOT_ALLOWED=The default unit can only be set on the dimension property type.
 INVALID_UNIT=The default unit "{1}" on property "{0}" is invalid.
 ENCYRPTION_EXTENSION_EXISTS=The encryption extension "{0}" exists.
+VISIBILITY_PROPERTY_NOT_FOUND=Property visibility:[{1}] on element: [{0}] doesn't point to an exsiting property.
