Updated online help for BIRT R1.0. Updated html content and reconfigured table of contents. Added extension point description files. Updated build file to include extension point descriptions.

--- a/docs/org.eclipse.birt.doc/plugin.xml
+++ b/docs/org.eclipse.birt.doc/plugin.xml
@@ -12,7 +12,12 @@
          point="org.eclipse.help.toc">
       <toc
             primary="true"
-            file="toc.xml"/>
+            file="BIRTToc.xml"/>
+      <toc
+            primary="true"
+            file="UserToc.xml"/>
+      <toc
+            file="RefToc.xml"/>
    </extension>
 
 </plugin>
