Support the tight coupling between image items and embedded images.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -25,6 +25,7 @@ DUPLICATE_CHOICE_SET_NAME=Duplicate choice set names when adding the choice set 
 MISSING_STRUCT_NAME=Missing structure name when adding a structure to the meta-data dictionary.
 DUPLICATE_STRUCT_NAME=Duplicate structure names when adding the structure [{0}] to the meta-data dictionary.
 MISSING_STRUCT_DEFN=Missing structure definition for structure list type property [{0}].
+UNREFERENCABLE_STRUCT_DEFN=Structure definition is not referencable for structure reference type property [{0}].
 MISSING_ELEMENT_TYPE=Missing element reference for element reference type property [{0}].
 UNDEFINED_ELEMENT_TYPE=Element [{0}] referenced by property [{1}] is not defined.
 UNNAMED_ELEMENT_TYPE=Element [{0}] referenced by property [{1}] is an unnamed element(namespace=='no_namespace').
@@ -58,3 +59,4 @@ DEFAULT_UNIT_NOT_ALLOWED=The default unit can only be set on the dimension prope
 INVALID_UNIT=The default unit "{1}" on property "{0}" is invalid.
 ENCYRPTION_EXTENSION_EXISTS=The encryption extension "{0}" exists.
 VISIBILITY_PROPERTY_NOT_FOUND=Property visibility:[{1}] on element: [{0}] doesn't point to an exsiting property.
+REPORT_MISSING=The root element: report design is not defined.
