--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -20,6 +20,7 @@ tablepage.label.Applyfilter=If your schema is large, use the filter to find the 
 tablepage.label.selectTable=Select one or more tables, then click the ">" button to add them to the data set.
 tablepage.label.filter=Filter:
 tablepage.label.refresh=Refreshing..
+tablepage.label.schema=Schema:
 tablepage.button.filter=Apply Filter
 tablepage.label.filterNote=(The filter supports wildcards. '%' matches zero or more characters. '-' matches one character)
 tablepage.title=Select the tables to appear in the data set.
@@ -27,7 +28,7 @@ tablepage.label.availableItems=Available Items:
 tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
 tablepage.text.tabletype=Table
 tablepage.text.viewtype=View
-tablepage.text.All=All
+tablepage.text.All=-All-
 wizard.label.selectTables=Select Tables:
 wizard.label.selectColumns=Select one or more columns from the list.
 wizard.label.available=Available:
