Fix two potential bugs in JDBCDataSourcePage.

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -11,11 +11,14 @@ sqleditor.action.selectAll=Select all
 connection.test=Test connection
 connection.failed=Failed to connect to data source
 connection.success=Connection Successful
+connection.failed=Failed to create a connection. Please verify the connection properties.
 wizard.title.newDataSource=New Data Source
 wizard.title.selectColumns=Columns
 wizard.title.tables=Tables
 wizard.title.createJoin=Create a join by dragging a column from one table to the matching column in another table.
 wizard.message.selectColumns=Select one or more tables, then click the ">" button to add them to the data set.
+wizard.message.warning=Warning
+wizard.message.warning.invaliddatasource=The provided data source information is incomplete. Would you like to continue anyway?
 tablepage.label.Applyfilter=If your schema is large, use the filter to find the tables of interest.
 tablepage.label.selectTable=Select one or more tables, then click the ">" button to add them to the data set.
 tablepage.label.filter=Filter:
