--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -4,8 +4,7 @@
    id="org.eclipse.birt.report.data.oda.sampledb.ui"
    name="BIRT Sample database Ui Plug-in"
    version="1.0.0"
-   provider-name="Eclipse.org"
-   class="org.eclipse.birt.report.data.oda.sampledb.ui.UiPlugin">
+   provider-name="Eclipse.org">
 
    <runtime>
       <library name="sampledbui.jar">
