1. Moved two IPlatformContext implementations from report engine level down to BIRT core platform level, such that developers can use those two implementation at core platform level. 2. Created IPlatformPath and two implementations for it respectively. One implementation is for Eclipse platform. The other one is for server platform.

--- a/core/org.eclipse.birt.core/plugin.xml
+++ b/core/org.eclipse.birt.core/plugin.xml
@@ -19,6 +19,9 @@
       <library name="core.jar">
          <export name="*"/>
       </library>
+      <library name="lib/servlet.jar">
+         <export name="*"/>
+      </library>
    </runtime>
    
    <requires>
