--- a/core/org.eclipse.birt.core/plugin.xml
+++ b/core/org.eclipse.birt.core/plugin.xml
@@ -4,7 +4,8 @@
    id="org.eclipse.birt.core"
    name="BIRT Core Package"
    version="1.0.0"
-   provider-name="Eclipse.org">
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.core.plugin.CorePlugin">
    
    <runtime>
       <library name="lib/js.jar">
