--- a/core/org.eclipse.birt.core/plugin.xml
+++ b/core/org.eclipse.birt.core/plugin.xml
@@ -26,6 +26,6 @@
    </runtime>
    
    <requires>
-      <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.core.runtime" export="true"/>
    </requires>
 </plugin>
