--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -57,3 +57,4 @@ INVALID_UNIT=The default unit "{1}" on property "{0}" is invalid.
 ENCYRPTION_EXTENSION_EXISTS=The encryption extension "{0}" exists.
 VISIBILITY_PROPERTY_NOT_FOUND=Property visibility:[{1}] on element: [{0}] doesn't point to an exsiting property.
 REPORT_MISSING=The root element: report design is not defined.
+INVALID_CHOICE_VALUE=The choice value "{0}"  on property "{1}" is invalid.  
