--- a/data/org.eclipse.birt.data/plugin.xml
+++ b/data/org.eclipse.birt.data/plugin.xml
@@ -4,7 +4,8 @@
    id="org.eclipse.birt.data"
    name="BIRT Data Engine"
    version="1.0.0"
-   provider-name="Eclipse.org">
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.data.engine.plugin.DataEnginePlugin">
    <runtime>
       <library name="dte.jar">
          <export name="*"/>
