--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -4,7 +4,8 @@
    id="org.eclipse.birt.report.data.oda.sampledb.ui"
    name="BIRT Sample database Ui Plug-in"
    version="1.0.0"
-   provider-name="Eclipse.org">
+   provider-name="Eclipse.org"
+   class="org.eclipse.birt.report.data.oda.sampledb.ui.plugin.SampledbUIPlugin">
 
    <runtime>
       <library name="sampledbui.jar">
