Fix bugzilla bug 104204    [SPM]Test connection fail when try to connect birt derby sample db

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -9,8 +9,8 @@ sqleditor.action.copy=Copy
 sqleditor.action.paste=Paste
 sqleditor.action.selectAll=Select all
 connection.test=Test connection
-connection.failed=Failed to connect to data source
-connection.success=Connection Successful
+connection.failed=Failed to connect to data source.
+connection.success=Connection Successful.
 connection.failed=Failed to create a connection. Please verify the connection properties.
 wizard.title.newDataSource=New Data Source
 wizard.title.selectColumns=Columns
