Add .options files to build export list

--- a/core/org.eclipse.birt.core/build.properties
+++ b/core/org.eclipse.birt.core/build.properties
@@ -2,11 +2,15 @@ source.core.jar = src/
 output.core.jar = bin/
 bin.includes = plugin.xml,\
                core.jar,\
-               lib/
+               lib/,\
+               About.html,\
+               .options
 src.includes = plugin.xml,\
                src/,\
                BuildCore.xml,\
                test/,\
-               build.properties
+               build.properties,\
+               .options,\
+               About.html
 bin.excludes = lib/junit.jar,\
                lib/commons-logging.jar
