Enhance Manage Driver Dialog

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -77,6 +77,7 @@ driverManagerDialog.text.jarColumnFileName=File Name
 driverManagerDialog.text.jarColumnLocation=Original Location
 driverManagerDialog.message.NotInODADirectory=x - This file does not exist in the ODA JDBC drivers directory.
 driverManagerDialog.message.FileNotExist=* - This file does not exist in the original location.
+driverManagerDialog.message.FileRestored=+ - This file has been restored.
 driverManagerDialog.text.Add=Add...
 driverManagerDialog.text.Restore=Restore
 driverManagerDialog.text.Delete=Delete
@@ -90,4 +91,6 @@ driverManagerDialog.text.EditDriverTitle=Edit JDBC Driver
 driverManagerDialog.text.EditDriverClassName=Driver Class Name:
 driverManagerDialog.text.EditDriverDisplayName=Driver Display Name:
 driverManagerDialog.text.EditDriverTemplate=URL Template:
+driverManagerDialog.error.CanNotAddDriver=Can not add a duplicate jar file 
+driverManagerDialog.text.DriverError=Add Driver Error.
 
